add block hamburger menu

--- a/html/home.html
+++ b/html/home.html
@@ -1,2 +1,13 @@
-<h1>hello world!</h1>
-<p>goodbye world</p>
+<!DOCTYPE html>
+<html>
+<title>Home Page</title>
+<body>
+
+<div></div>
+<div></div>
+<div></div>
+
+
+
+</body>
+</html>
