add css file w buttonBar and floatingText classes

--- a/html/textPreview.html
+++ b/html/textPreview.html
@@ -2,14 +2,19 @@
 <html>
     <head>
         <title>Text Preview</title>
-        <h1>This is our title :)</h1>
+        <h1>Text Preview</h1>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" type="text/css" href="../css/textPreview.css">
     </head>
     <body>
-        <p>paragraph</p>
-        <button><h2>Button</h2></button>
-        </br>
+        <div class="floatingText">
+            <p>paragraph of text goes here</p>
+        </div>
+        <div class="buttonBar">
+        <input type="button"; name="back"; value="Back"/>
+        <input type="button"; name="cancel"; value="Cancel"/>
         <input type="submit">
+        </div>
     </body>
     
     
