styling doc and buttons

--- a/html/textPreview.html
+++ b/html/textPreview.html
@@ -8,12 +8,20 @@
     </head>
     <body>
         <div class="floatingText">
-            <p>paragraph of text goes here</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis magna leo, sodales at nunc at, efficitur pulvinar risus. Vivamus a diam mattis, gravida tortor vel, sodales eros. Donec vitae purus tortor. Praesent mauris nisl, porta et aliquam eget, varius vitae dui. Donec blandit quam purus, dapibus eleifend lacus posuere quis. Donec convallis, eros eu facilisis aliquam, urna neque ornare justo, sed hendrerit eros leo sit amet est. Vivamus fermentum mauris aliquam, dignissim massa sit amet, faucibus felis. Integer porta nec ante ut mollis. Nulla condimentum quis tortor in placerat.
+
+Suspendisse at ante diam. Nullam sit amet congue ipsum. Nulla mauris arcu, consectetur sit amet sollicitudin a, scelerisque eu massa. Integer aliquet commodo massa quis aliquam. Curabitur sagittis, orci sit amet accumsan efficitur, metus dolor maximus ante, id euismod orci leo at sapien. Curabitur at pharetra lorem. Nullam cursus massa nisi, in gravida velit tincidunt nec. Duis vitae justo ut dui accumsan laoreet in in nunc. Nam viverra porta leo ut volutpat.
+
+Phasellus non libero commodo, aliquam ligula vel, luctus est. Curabitur a ipsum nisl. Curabitur vehicula libero sed consequat volutpat. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Suspendisse maximus nec purus eu ultrices. Cras ultricies maximus nulla. Donec a viverra ligula. Integer turpis enim, sodales a velit id, commodo volutpat magna. Integer ornare euismod ipsum quis imperdiet. Curabitur in sem quam.
+
+Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Maecenas ac augue sed mi pharetra dictum quis in purus. Donec euismod nisi tortor, vel laoreet orci tempor nec. Proin eget turpis at dui vestibulum molestie. Vivamus consectetur, elit ac tincidunt pretium, erat lectus porttitor tellus, non ultrices magna odio id ex. Nam venenatis quam a nisi egestas, eu venenatis ante imperdiet. Cras metus sapien, commodo ut lorem in, scelerisque congue lectus. Aenean lacinia nunc erat, ut bibendum nulla aliquet sit amet. Mauris tempor ligula ut massa elementum, ut lacinia dolor viverra. Cras tortor nulla, volutpat quis nisl sodales, volutpat ornare odio. Sed imperdiet elementum condimentum. Pellentesque feugiat egestas mollis. Suspendisse turpis lacus, dignissim sed nunc nec, convallis accumsan sapien. Cras venenatis elit et neque sodales, eget sodales leo pharetra. Nunc eleifend nec mauris eget hendrerit. Quisque fringilla quam sed dolor lacinia, id consectetur ligula vulputate.
+
+Vivamus at pharetra massa. Suspendisse erat ex, ornare malesuada est gravida, ultricies porta nulla. Vivamus id finibus diam. Sed a dolor quis lectus sodales cursus feugiat quis leo. Ut volutpat dolor at turpis venenatis scelerisque. Phasellus molestie cursus accumsan. Aliquam quis volutpat diam. Sed a mattis arcu, non rhoncus quam. Phasellus in sapien nibh. Fusce ullamcorper, urna quis mollis rutrum, nisi mauris vulputate ex, at suscipit sem augue et ante. Mauris id velit tortor. Praesent vitae tincidunt nisl, ut aliquam felis. Curabitur condimentum consequat eros sed maximus. Sed a varius erat. Duis tempor nunc est.</p>
         </div>
         <div class="buttonBar">
-        <input type="button"; name="back"; value="Back"/>
-        <input type="button"; name="cancel"; value="Cancel"/>
-        <input type="submit">
+        <input type="button"; name="back"; value="Back"; id="circle"/>
+        <input type="button"; name="cancel"; value="Cancel"; id="circle"/>
+        <input type="submit"; id="circle">
         </div>
     </body>
     
