finished the cam button

--- a/html/home.html
+++ b/html/home.html
@@ -71,7 +71,7 @@
             </div>
           </a>  
       </div>
-      <input type="button" value="+" id="cam__button">
+      <a id="cam__button"><img src="../img/camera-icon-white.png" alt="" class="cam__img"></a>
       
 
     <!-- Optional JavaScript -->
